[build-system]
requires = ["setuptools>=45", "wheel>=0.37.1", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
normalize = false
root = "."
relative_to = "setup.py"
write_to = 'rattleSNP/_version.py'

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39}
skip_missing_interpreters = True
skipsdist=False

[testenv:py{38,39}]
description = Run the install in Python 3.8
skip_install = False
changedir={envdir}
envdir =
    py38: {toxworkdir}/py38
    py39: {toxworkdir}/py39
commands =
    rattleSNP --help
    rattleSNP install_local


[run]
description = Run Installation rattleSNP install_local
changedir={envdir}
skipsdist=True
commands =
    rattleSNP test_install -d test
    rattleSNP run_local --threads 8 --config {posargs} --singularity-args '--bind /builds:/builds'


[testenv:py38-run]
description = Run workflow pass on args to culebrONT
envdir =
    py38: {toxworkdir}/py38
    py39: {toxworkdir}/py39
changedir={envdir}
commands = {[run]commands}


#[testenv:py{38,39}-run]
#description = Run workflow pass on args to rattleSNP
#envdir = {toxworkdir}/py{38,39}-tests
#skipsdist=True
#commands = rattleSNP run_local --threads 8 --config {posargs}
"""

